--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="LinkButton">-1- Textures & Colors </div>
         </a>
         <a href="#3d">
-            <div class="LinkButton">-1- 3D Modelling </div>
+            <div class="LinkButton">3D Modelling (29) </div>
         </a>
 
 
@@ -266,19 +266,19 @@
         <a href="https://www.patreon.com/posts/21033280" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/Previews/article9.jpg)">
                 <div class="number"> #9</div>
-                <div class="centered">Polybrush and Vertex Color Shaders/div>
-                    <div class="date">08/2018</div>
-                    <div class="description">Using Polybrush to add effects in the editor</div>
+                <div class="centered">Polybrush and Vertex Color Shaders</div>
+                <div class="date">08/2018</div>
+                <div class="description">Using Polybrush to add effects in the editor</div>
 
-                </div>
-                <div class="normal-link">
-                    Read Post
-                </div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
 
 
-                <div class="patreon-link">
+            <div class="patreon-link">
 
-                </div>
+            </div>
 
         </a>
         <p></p>
@@ -287,19 +287,19 @@
         <a href="https://www.patreon.com/posts/21343562" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/Previews/article10.jpg)">
                 <div class="number"> #10</div>
-                <div class="centered">Astro Kat : Moving Kat/div>
-                    <div class="date">09/2018</div>
-                    <div class="description">Character Controller Sample with IK</div>
+                <div class="centered">Astro Kat : Moving Kat</div>
+                <div class="date">09/2018</div>
+                <div class="description">Character Controller Sample with IK</div>
 
-                </div>
-                <div class="normal-link">
-                    Read Post
-                </div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
 
 
-                <div class="patreon-link">
+            <div class="patreon-link">
 
-                </div>
+            </div>
 
         </a>
         <p></p>
@@ -309,19 +309,19 @@
         <a href="https://www.patreon.com/posts/22015350" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/Previews/article11.jpg)">
                 <div class="number"> #11</div>
-                <div class="centered">Skinned Mesh Painting Prototype/div>
-                    <div class="date">10/2018</div>
-                    <div class="description">Decals using Projectors and Rendertexture</div>
+                <div class="centered">Skinned Mesh Painting Prototype</div>
+                <div class="date">10/2018</div>
+                <div class="description">Decals using Projectors and Rendertexture</div>
 
-                </div>
-                <div class="normal-link">
-                    Read Post
-                </div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
 
 
-                <div class="patreon-link">
+            <div class="patreon-link">
 
-                </div>
+            </div>
 
         </a>
         <p></p>
@@ -330,25 +330,317 @@
         <a href="https://www.patreon.com/posts/22650450" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/Previews/article12.jpg)">
                 <div class="number"> #12</div>
-                <div class="centered">Character Customisation Prototype/div>
-                    <div class="date">11/2018</div>
-                    <div class="description">Custom Character using Blendshapes and Color masking</div>
+                <div class="centered">Character Customisation Prototype</div>
+                <div class="date">11/2018</div>
+                <div class="description">Custom Character using Blendshapes and Color masking</div>
 
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/22803341" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
                 </div>
-                <div class="normal-link">
-                    Read Post
-                </div>
-
-
-                <a href="https://www.patreon.com/posts/22803341" target="_blank">
-                    <div class="patreon-link">
-                        <Patreon></Patreon> Source Files ($10 Tier)
-                    </div>
-                </a>
+            </a>
 
         </a>
         <p></p>
 
+
+        <a href="https://www.patreon.com/posts/24192529" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article13.jpg)">
+                <div class="number"> #13</div>
+                <div class="centered">Interactive Water</div>
+                <div class="date">01/2019</div>
+                <div class="description"> Interactive water using RenderTexture and Particles</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/24235739" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/24601204" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article14.jpg)">
+                <div class="number"> #14</div>
+                <div class="centered">Intro to Shader Graph (LWRP/URP)</div>
+                <div class="date">02/2019</div>
+                <div class="description"> Introduction to the Shader Graph UI and a simple effect</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/25096975" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/24781996" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article15.jpg)">
+                <div class="number"> #15</div>
+                <div class="centered">Converting to Shader Graph</div>
+                <div class="date">02/2019</div>
+                <div class="description">Converting 3 effects: Toon Shader, Iridescent, Snow Buildup</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/25096975" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/24781996" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article16.jpg)">
+                <div class="number"> #16</div>
+                <div class="centered">Converting to Shader Graph 2</div>
+                <div class="date">03/2019</div>
+                <div class="description">Converting 3 effects: Waterfall, Triplanar, Fake Liquid</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/25096975" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/25641162" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article17.jpg)">
+                <div class="number"> #17</div>
+                <div class="centered">Interactive Snow</div>
+                <div class="date">03/2019</div>
+                <div class="description"> Interactive snow using RenderTexture and Tesselation</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/25736816" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/26211104" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article18.jpg)">
+                <div class="number"> #18</div>
+                <div class="centered">Selective Image Effects</div>
+                <div class="date">04/2019</div>
+                <div class="description"> Using Stencil buffer to control image effects</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/26353960" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/26438849" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article19.jpg)">
+                <div class="number"> #19</div>
+                <div class="centered">Shader Graph World Position Effect</div>
+                <div class="date">04/2019</div>
+                <div class="description"> Shader Graph conversion of the World Position Radius Effects (Appear, Swap, Disappear)</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (Source Files are Free)
+            </div>
+
+
+
+            <div class="patreon-link">
+            </div>
+
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/25345683" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article20.jpg)">
+                <div class="number"> #20</div>
+                <div class="centered">Astro Kat : Character Design</div>
+                <div class="date">05/2019</div>
+                <div class="description"> Design process of a lizard character for Astro Kat</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (Includes Free Models & Video)
+            </div>
+
+
+
+            <div class="patreon-link">
+
+            </div>
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/27402644" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article21.jpg)">
+                <div class="number"> #21</div>
+                <div class="centered">Stylized Skybox</div>
+                <div class="date">06/2019</div>
+                <div class="description"> Unity setup for a procedural clouds skybox with a day and night setting</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/27806295" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/27942969" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article22.jpg)">
+                <div class="number"> #22</div>
+                <div class="centered">Shader Graph (Vertex / Toon)</div>
+                <div class="date">06/2019</div>
+                <div class="description"> Toon Lighting (Custom node) and vertex colors for specular and texture painting </div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (Includes Shader Graph Files)
+            </div>
+
+
+
+            <div class="patreon-link">
+
+            </div>
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/28252090" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article23.jpg)">
+                <div class="number"> #23</div>
+                <div class="centered">Blendshape Face Anim & Eye Tracking</div>
+                <div class="date">07/2019</div>
+                <div class="description"> Facial expression animations via blendshapes + eye tracking</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/28388886" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/28616038" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article24.jpg)">
+                <div class="number"> #24</div>
+                <div class="centered">Hit/ Explosion effects</div>
+                <div class="date">07/2019</div>
+                <div class="description"> Making hit/explosion particle effects with custom particle shaders</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/28733514" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+
+        <a href="https://www.patreon.com/posts/29753575" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article25.jpg)">
+                <div class="number"> #25</div>
+                <div class="centered">Parallax Effects</div>
+                <div class="date">09/2019</div>
+                <div class="description"> Making parallax shaders for ice/gems</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/29853624" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
 
 
         <div class="headertext" style="font-size: 20px">
@@ -962,6 +1254,79 @@
         </a>
         <p></p>
 
+        <a href="https://www.patreon.com/posts/23929697" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity34.jpg)">
+                <div class="number"> Unity #34</div>
+                <div class="centered">Caustics Projector Shader</div>
+                <div class="date">01/2019</div>
+                <div class="description"> A moving caustics projector shader</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/23956404" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/25418236" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity35.jpg)">
+                <div class="number"> Unity #35</div>
+                <div class="centered">Bastion Tile Effect</div>
+                <div class="date">03/2019</div>
+                <div class="description">Moving into position with Material Property Blocks</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/25460352" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/27093551" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity36.jpg)">
+                <div class="number"> Unity #36</div>
+                <div class="centered">Particle Fire Shader</div>
+                <div class="date">05/2019</div>
+                <div class="description"> Using custom data from particles for a fire effect(lifetime)</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/27137193" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/29141036" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity37.jpg)">
+                <div class="number"> Unity #37</div>
+                <div class="centered">Procedural Eye Shader</div>
+                <div class="date">08/2019</div>
+                <div class="description"> Using distance fields for procedural eyeballs</div>
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+            <a href="https://www.patreon.com/posts/29164761" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
 
 
         <div class="headertext" style="font-size: 20px">
