--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <p></p>
 
 
-        <a href="https://www.patreon.com/posts/17804712" target="_blank">
+        <a href="https://www.patreon.com/posts/how-i-got-with-19042499" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/Previews/article5.jpg)">
                 <div class="number"> #5</div>
                 <div class="centered">Shader Intro</div>
