--- a/index.html
+++ b/index.html
@@ -1829,7 +1829,7 @@
         <p></p>
 
 
-        <a href="https://www.patreon.com/posts/7790432" target="_blank">
+        <a href="https://www.patreon.com/posts/quick-game-art-7862881" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/Previews/3d2.jpg)">
                 <div class="number"> 3D #2</div>
                 <div class="centered">Prototyping with Primitives</div>
