--- a/index.html
+++ b/index.html
@@ -817,6 +817,27 @@
         </a>
         <p></p>
 
+        <a href="https://www.patreon.com/posts/shader-graph-32245563" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article34.jpg)">
+                <div class="number"> #34</div>
+                <div class="centered">Shader Graph Eyes</div>
+                <div class="date">02/2020</div>
+                <div class="description"> Eyeball shader graph conversion</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl shader graphs)
+            </div>
+
+            <a href="https://www.patreon.com/posts/eyeball-shader-34219911" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
 
         <div class="headertext" style="font-size: 20px">
             <a name="shaders"></a> Unity/ Shaders
