--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
             <div class="LinkButton">Videos (4) </div>
         </a>
         <a href="#articles">
-            <div class="LinkButton"> Articles (33) </div>
+            <div class="LinkButton"> Articles (37) </div>
         </a>
         <a href="#shaders">
-            <div class="LinkButton">Unity/Shaders (39) </div>
+            <div class="LinkButton">Unity/Shaders (40) </div>
         </a>
         <a href="#textures">
             <div class="LinkButton">Textures & Colors (14) </div>
@@ -839,6 +839,66 @@
         <p></p>
 
 
+        <a href="https://www.patreon.com/posts/35207209" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article35.jpg)">
+                <div class="number"> #35</div>
+                <div class="centered">Astro Kat: Moving Kat 2 (Jumps and Slopes)</div>
+                <div class="date">03/2020</div>
+                <div class="description">Handling Jumps and Slopes on a Character Controller</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (includes code samples)
+            </div>
+
+
+            <div class="patreon-link">
+
+            </div>
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/35698820" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article36.jpg)">
+                <div class="number"> #36</div>
+                <div class="centered">Shader Graph Dissolve/Teleport</div>
+                <div class="date">04/2020</div>
+                <div class="description"> Eyeball shader graph for the Vertical Dissolve/Teleport effect</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl shader graphs)
+            </div>
+
+            <a href="https://www.patreon.com/posts/35787482" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/36130209" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article37.jpg)">
+                <div class="number"> #37</div>
+                <div class="centered">Resourches for VFX/Shader Textures</div>
+                <div class="date">04/2020</div>
+                <div class="description">Noise & Pattern texture Resources and Tools for VFX/Shaders</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <div class="patreon-link">
+
+            </div>
+
+        </a>
+        <p></p>
         <div class="headertext" style="font-size: 20px">
             <a name="shaders"></a> Unity/ Shaders
         </div>
@@ -1560,6 +1620,25 @@
             </div>
         </a>
         <p></p>
+
+        <a href="https://www.patreon.com/posts/34859694" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity40.jpg)">
+                <div class="number"> Unity #40</div>
+                <div class="centered">Vertical Dissolve/Teleport Shader</div>
+                <div class="date">4/2020</div>
+                <div class="description"> Effect that dissolves with vertex displacement</div>
+            </div>
+            <div class="normal-link">
+                Read Post (incl free shader code)
+            </div>
+            <a href="https://www.patreon.com/posts/34963755" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+        </a>
+        <p></p>
+
 
 
         <div class="headertext" style="font-size: 20px">
