--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 
                 <Kofi></Kofi>
             </a>
+            <a href="https://www.youtube.com/channel/UCXPnfpikLeCQAzweo3-OSuw">
+
+                <Youtube></Youtube>
+            </a>
 
         </div>
     </div>
@@ -58,7 +62,7 @@
             <div class="LinkButton">Videos (4) </div>
         </a>
         <a href="#articles">
-            <div class="LinkButton"> Articles (37) </div>
+            <div class="LinkButton"> Articles (43) </div>
         </a>
         <a href="#shaders">
             <div class="LinkButton">Unity/Shaders (40) </div>
@@ -418,7 +422,7 @@
         </a>
         <p></p>
 
-        <a href="https://www.patreon.com/posts/24781996" target="_blank">
+        <a href="https://www.patreon.com/posts/shader-part-2-24996282" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/Previews/article16.jpg)">
                 <div class="number"> #16</div>
                 <div class="centered">Converting to Shader Graph 2</div>
@@ -883,7 +887,7 @@
         <a href="https://www.patreon.com/posts/36130209" target="_blank">
             <div class="preview-image-holder" style="background: url(Images/Previews/article37.jpg)">
                 <div class="number"> #37</div>
-                <div class="centered">Resourches for VFX/Shader Textures</div>
+                <div class="centered">Resources for VFX/Shader Textures</div>
                 <div class="date">04/2020</div>
                 <div class="description">Noise & Pattern texture Resources and Tools for VFX/Shaders</div>
 
@@ -899,6 +903,143 @@
 
         </a>
         <p></p>
+
+        <a href="https://www.patreon.com/posts/free-small-from-36587566" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article38.jpg)">
+                <div class="number"> #38</div>
+                <div class="centered">Free models from B-day Stream</div>
+                <div class="date">05/2020</div>
+                <div class="description">29 small low-poly models</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+
+            <div class="patreon-link">
+
+            </div>
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/making-clean-map-37285218" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article39.jpg)">
+                <div class="number"> #39</div>
+                <div class="centered">Clean (Mini)Map Setup</div>
+                <div class="date">05/2020</div>
+                <div class="description"> Making a clean (mini)map using Navmesh and a Shader</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+            <a href="https://www.patreon.com/posts/clean-navmesh-37464650" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+            <a href="https://www.patreon.com/posts/urp-friendly-map-37881295" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> URP Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/shader-graph-32245554" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article40.jpg)">
+                <div class="number"> #40</div>
+                <div class="centered">Shader Graph Sprite Outline Effects</div>
+                <div class="date">05/2020</div>
+                <div class="description"> Outline effects for sprites in Shader Graph</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl shader graphs)
+            </div>
+
+            <a href="https://www.patreon.com/posts/shader-graph-37654802" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+
+        <a href="https://www.patreon.com/posts/animated-light-38047499" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article41.jpg)">
+                <div class="number"> #41</div>
+                <div class="centered">Animated Light Cookie</div>
+                <div class="date">06/2020</div>
+                <div class="description"> Cloud/Tree shadows with Light Cookies</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+            <a href="https://www.patreon.com/posts/animated-light-38155780" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/setting-up-using-38499638" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article42.jpg)">
+                <div class="number"> #42</div>
+                <div class="centered">Interactive Chains</div>
+                <div class="date">06/2020</div>
+                <div class="description"> Setting up Interactive Chains with Joints</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post
+            </div>
+
+            <a href="https://www.patreon.com/posts/interactive-38733604" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
+        <a href="https://www.patreon.com/posts/shader-graph-39024186" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article43.jpg)">
+                <div class="number"> #43</div>
+                <div class="centered">Shader Graph Stylized Skybox</div>
+                <div class="date">07/2020</div>
+                <div class="description">Shader Graph Conversion of the Skybox</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl shader graphs)
+            </div>
+
+
+            <a href="https://www.patreon.com/posts/shader-graph-39069131" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+        </a>
+        <p></p>
+
+
         <div class="headertext" style="font-size: 20px">
             <a name="shaders"></a> Unity/ Shaders
         </div>
