--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
-
     </script>
 
 
@@ -72,13 +71,13 @@
         <p style="color:white">All Tutorial posts from the Patreon</p>
 
         <a href="#videos">
-            <div class="LinkButton">Videos (4) </div>
+            <div class="LinkButton">Videos (7) </div>
         </a>
         <a href="#articles">
-            <div class="LinkButton"> Articles (43) </div>
+            <div class="LinkButton"> Articles (44) </div>
         </a>
         <a href="#shaders">
-            <div class="LinkButton">Unity/Shaders (40) </div>
+            <div class="LinkButton">Unity/Shaders (41) </div>
         </a>
         <a href="#textures">
             <div class="LinkButton">Textures & Colors (14) </div>
@@ -112,6 +111,20 @@
 
         <p></p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/py4DVbNOMQ8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <p></p>
+
+        <p></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/4dAGUxvsD24" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p></p>
+
+        <p></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/MCQPAQq2lsI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <p></p>
+
+        <p></p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Kv9W7qQ0ONY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
         <p></p>
 
@@ -1052,6 +1065,23 @@
         </a>
         <p></p>
 
+        <a href="https://www.patreon.com/posts/40192059" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article44.jpg)">
+                <div class="number"> #44</div>
+                <div class="centered">Gradient Map Image Effect</div>
+                <div class="date">08/2020</div>
+                <div class="description">ImageEffect setup for URP and Legacy</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+
+
+
+        </a>
+        <p></p>
+
 
         <div class="headertext" style="font-size: 20px">
             <a name="shaders"></a> Unity/ Shaders
@@ -1790,6 +1820,20 @@
                     <Patreon></Patreon> All Source Files ($10 Tier)
                 </div>
             </a>
+        </a>
+        <p></p>
+
+        <a href="https://www.patreon.com/posts/39412122" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/unity41.jpg)">
+                <div class="number"> Unity #41</div>
+                <div class="centered">Sprite/UI Color Mask</div>
+                <div class="date">7/2020</div>
+                <div class="description"> Using color channels as a mask</div>
+            </div>
+            <div class="normal-link">
+                Read Post (incl free shader code)
+            </div>
+
         </a>
         <p></p>
 
@@ -2643,9 +2687,6 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
         }
-
     </script>
 
-</body>
-
-</html>
+</body></html>
