--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
+
     </script>
 
 
@@ -71,7 +72,7 @@
         <p style="color:white">All Tutorial posts from the Patreon</p>
 
         <a href="#videos">
-            <div class="LinkButton">Videos (7) </div>
+            <div class="LinkButton">Videos (8) </div>
         </a>
         <a href="#articles">
             <div class="LinkButton"> Articles (44) </div>
@@ -128,6 +129,8 @@
 
         <p></p>
 
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/DIE3qfCGXl8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p></p>
         <div class="headertext" style="font-size: 20px">
             <a name="articles"></a> Articles
         </div>
@@ -2687,6 +2690,9 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
         }
+
     </script>
 
-</body></html>
+</body>
+
+</html>
