--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
-
     </script>
 
 
@@ -1079,11 +1078,37 @@
             <div class="normal-link">
                 Read Post (incl code)
             </div>
-
+            <a href="https://www.patreon.com/posts/image-effects-40445929" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
 
 
         </a>
         <p></p>
+
+        <a href="https://www.patreon.com/posts/40078029" target="_blank">
+            <div class="preview-image-holder" style="background: url(Images/Previews/article45.jpg)">
+                <div class="number"> #45</div>
+                <div class="centered">Advanced Waterfall Shader</div>
+                <div class="date">08/2020</div>
+                <div class="description">New Waterfall with Refractions, Interactivity</div>
+
+            </div>
+            <div class="normal-link">
+                Read Post (incl code)
+            </div>
+            <a href="https://www.patreon.com/posts/new-waterfall-40810634" target="_blank">
+                <div class="patreon-link">
+                    <Patreon></Patreon> All Source Files ($10 Tier)
+                </div>
+            </a>
+
+
+        </a>
+        <p></p>
+
 
 
         <div class="headertext" style="font-size: 20px">
@@ -2690,9 +2715,6 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
         }
-
     </script>
 
-</body>
-
-</html>
+</body></html>
