--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
+
     </script>
 
 
@@ -74,7 +75,7 @@
             <div class="LinkButton">Videos (8) </div>
         </a>
         <a href="#articles">
-            <div class="LinkButton"> Articles (44) </div>
+            <div class="LinkButton"> Articles (45) </div>
         </a>
         <a href="#shaders">
             <div class="LinkButton">Unity/Shaders (41) </div>
@@ -2715,6 +2716,9 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
         }
+
     </script>
 
-</body></html>
+</body>
+
+</html>
