--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-70751511-2');
-
     </script>
 
 
@@ -42,12 +41,8 @@
             <a href="https://twitter.com/minionsart">
                 <Twitter></Twitter>
             </a>
-            <a href="https://www.patreon.com/minionsart">
 
 
-                <PatreonBig></PatreonBig>
-
-            </a>
             <a href="https://www.twitch.tv/minionsart">
 
                 <Twitch></Twitch>
@@ -60,6 +55,10 @@
 
                 <Youtube></Youtube>
             </a>
+
+            <br><br>
+            <a href="https://www.patreon.com/bePatron?u=4785538" data-patreon-widget-type="become-patron-button">Become a Patron!</a>
+            <script async src="https://c6.patreon.com/becomePatronButton.bundle.js"></script>
 
         </div>
     </div>
@@ -2716,9 +2715,6 @@
             document.body.scrollTop = 0; // For Safari
             document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
         }
-
     </script>
 
-</body>
-
-</html>
+</body></html>
